Added welcome div

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HomePage</title>
     <link rel="stylesheet" href="style.css">
     <script src="/site.js" defer></script>
 </head>
@@ -17,6 +17,9 @@
             </ul>
         </nav>
         <section class="right">
+            <div id="welcome">
+                <h1>TimeOFDay</h1>
+            </div>
             <h1>Alex Bio</h1>
             <p>
                 <img src="me.jpg" class="photoleft" alt="me" width="150" height="180">
